Overflow du chat fix

--- a/client/src/app/components/chat/chat.component.scss
+++ b/client/src/app/components/chat/chat.component.scss
@@ -4,13 +4,18 @@
     height: 100%;
     width: 100%;
     max-height: 100%;
+    min-height: 50%;
     display: flex;
     flex-direction: column;
-    overflow-y: auto;
     justify-content: flex-end;
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+
+    #messages-zone {
+        padding: 5px;
+        overflow-y: auto;
+    }
 
     #message-box {
         background-color: white;
@@ -112,4 +117,23 @@
 .message-text {
     word-break: break-word;
     font-size: 12px;
+}
+
+// Code tiré de https://www.w3schools.com/howto/howto_css_custom_scrollbar.asp
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
